force-app/main/default/objects/Express_Test__c/Express_Test__c.object-meta.xml
<CustomObject>
    <label>Экспресс-тест</label>
    <nameField>
        <displayFormat>ET-{000000}</displayFormat>
        <label>Экспресс тест код</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Экспресс-тесты</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>