force-app/main/default/objects/Express_Test__c/fields/Is_Ready_Notice_Date_Express_Test__c.field-meta.xml
<CustomField>
    <fullName>Is_Ready_Notice_Date_Express_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Заявка на Экспресс Тест готова?</label>
    <type>Checkbox</type>
</CustomField>