force-app/main/default/objects/Express_Test__c/fields/Number_Test__c.field-meta.xml
<CustomField>
    <fullName>Number_Test__c</fullName>
    <label>Номер теста</label>
    <length>15</length>
    <type>Text</type>
</CustomField>