force-app/main/default/objects/Express_Test__c/fields/Report_Additional_Text__c.field-meta.xml
<CustomField>
    <fullName>Report_Additional_Text__c</fullName>
    <label>Данные для отчета</label>
    <length>255</length>
    <type>Text</type>
</CustomField>