force-app/main/default/objects/Express_Test__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Результат</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IgM+;IgG+</fullName>
                <label>IgM+; IgG+</label>
            </value>
            <value>
                <fullName>IgM+;IgG-</fullName>
                <label>IgM+; IgG-</label>
            </value>
            <value>
                <fullName>IgM-;IgG+</fullName>
                <label>IgM-; IgG+</label>
            </value>
            <value>
                <fullName>IgM-;IgG-</fullName>
                <label>IgM-; IgG-</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>