force-app/main/default/objects/Express_Test__c/fields/Sick_leave__c.field-meta.xml
<CustomField>
    <fullName>Sick_leave__c</fullName>
    <label>Больничный</label>
    <referenceTo>Sick_leave__c</referenceTo>
    <relationshipLabel>Экспресс-тесты</relationshipLabel>
    <relationshipName>Express_test</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>