force-app/main/default/objects/Express_Test__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_Express_Test__c</columns>
    <columns>Result__c</columns>
    <columns>Number_Test__c</columns>
    <columns>Sick_leave__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>